--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-hook-form": "^7.55.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.4.1",
+    "react-select": "^5.10.1",
     "redux": "^5.0.1",
     "yup": "^1.6.1"
   },
