--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@hookform/resolvers": "^5.0.1",
     "@reduxjs/toolkit": "^2.6.1",
     "antd": "^5.24.6",
+    "bcrypt": "^5.1.1",
+    "bcryptjs": "^3.0.2",
     "bootstrap": "^5.3.5",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
@@ -28,6 +30,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
+    "@types/bcrypt": "^5.0.2",
     "@types/bootstrap": "^5.2.10",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
